--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -34,6 +34,28 @@
                 <div class="row">
 
                     <div class="col-1">
+                        <strong>{% if user.is_authenticated %}
+                            <form method="POST" action="{% url 'post_like' post.slug %}" class="d-inline">
+                                {% csrf_token%}
+                                {% if liked %}
+
+                                <button class="btn-like" type="submit" name="blogpost_id" value="{{post.slug}}">
+                                    <i class="fas fa-heart"></i>
+                                </button>
+                                {% else %}
+                                <button class="btn-like" type="submit" name="blogpost_id" value="{{post.slug}}">
+                                    <i class="far fa-heart"></i>
+                                </button>
+                                {% endif %}
+                            </form>
+                            {% else %}
+
+                            <span class="text-secondary">
+                                <i class="far fa-heart"></i>
+                            </span>
+                            {% endif %}
+                            <span class="text-secondary">{{ post.number_of_likes }}</span>
+                        </strong>
                         <!-- The number of likes goes before the closing strong tag -->
                         <strong class="text-secondary"><i class="far fa-heart"></i> {{ post.number_of_likes }} </strong>
                     </div>
